memodifikasi index.html dengan menambahkan p baru

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Percobaan pull di github</h1>
     <p>disini saya membuat repo baru dari local ke github</p>
+    <p>semangat yok hari ini tamat github dan git
+    </p>
 </body>
 </html>
